--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,4 +4,5 @@
 @import'./global/global';
 @import'./global/header';
 @import'./global/main';
-@import'./global/section'
+@import'./global/section';
+@import'./global/footer';
