Add product page and partner page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,3 +6,6 @@
 @import'./global/main';
 @import'./global/section';
 @import'./global/footer';
+@import'./pages/servises';
+@import'./pages/prodact';
+@import'./pages/partern';
