--- a/assets/scss/util/_variables.scss
+++ b/assets/scss/util/_variables.scss
@@ -12,3 +12,4 @@ $main-font: 'Roboto', sans-serif;
 $link-color: rgba(31, 46, 53, 0.8);
 $red-color:#ee4248;
 $footer-black:#263238;
+$main-color: #30444e;
