--- a/assets/scss/global/_main.scss
+++ b/assets/scss/global/_main.scss
@@ -1,5 +1,5 @@
 .main {
-  padding: 0 15px;
+  
   &-row {
     display: flex;
     padding: 74px 0 60px 0;
@@ -60,7 +60,7 @@
     border-radius: 4px;
     padding: 12px 30px;
     width: 161px;
-
+    margin-top: 30px;
     height: 53px;
     box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.25);
     background: #ee4248;
@@ -86,4 +86,49 @@
     width: 100%;
     height: 100%;
   }
+}
+.prodactover{
+ margin-top: 40px;
+    &-senter{
+      font-weight: 500;
+      font-size: 32px;
+      line-height: 134%;
+      text-align: center;
+      color: #1f2e35;
+    }
+    &-div{
+      
+      @include flex(center,center);
+      gap: 20px;
+      margin-top: 50px;
+      @media screen and (max-width: 760px) {
+        flex-direction: column;
+        width: 100%;
+      }
+
+    }
+    &-techngiy{
+      box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+      background: #fff;
+      border-radius: 4px;
+      padding: 20px;
+      width: 363px;
+      height: 360px;
+
+    }
+
+    &-our{
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 134%;
+      color:$red-color;
+    }
+    &-shared{
+      
+      max-width: 319px;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 150%;
+      color:$main-color;
+    }
 }
