--- a/style/style.css
+++ b/style/style.css
@@ -131,9 +131,6 @@ body,
   }
 }
 
-.main {
-  padding: 0 15px;
-}
 .main-row {
   display: flex;
   padding: 74px 0 60px 0;
@@ -205,6 +202,7 @@ body,
   border-radius: 4px;
   padding: 12px 30px;
   width: 161px;
+  margin-top: 30px;
   height: 53px;
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.25);
   background: #ee4248;
@@ -230,6 +228,51 @@ body,
 .main-pict img {
   width: 100%;
   height: 100%;
+}
+
+.prodactover {
+  margin-top: 40px;
+}
+.prodactover-senter {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 134%;
+  text-align: center;
+  color: #1f2e35;
+}
+.prodactover-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
+}
+@media screen and (max-width: 760px) {
+  .prodactover-div {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.prodactover-techngiy {
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  width: 363px;
+  height: 360px;
+}
+.prodactover-our {
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 134%;
+  color: #ee4248;
+}
+.prodactover-shared {
+  max-width: 319px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #30444e;
 }
 
 .section {
@@ -295,9 +338,6 @@ body,
   color: #ee4248;
 }
 
-.footer {
-  padding: 20x;
-}
 .footer-bottom {
   padding: 22px 0;
   background-color: #ee4248;
@@ -389,4 +429,212 @@ body,
 .footer-brands img {
   -o-object-fit: contain;
      object-fit: contain;
+}
+
+.banner {
+  position: relative;
+  height: 380px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+.banner-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../../imges/servises-page/banner-wave.svg);
+  background-position: bottom;
+}
+.banner-content {
+  max-width: 545px;
+  position: relative;
+}
+.banner-title {
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 134%;
+  text-align: center;
+  color: #263238;
+}
+.banner-title__red {
+  color: #ee4248;
+  font-weight: 700;
+}
+
+.services {
+  margin-bottom: 60px;
+}
+.services-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .services-row {
+    flex-direction: column-reverse;
+  }
+}
+.services-content {
+  width: 48%;
+}
+@media screen and (max-width: 768px) {
+  .services-content {
+    width: 100%;
+  }
+}
+.services-image {
+  width: 48%;
+}
+@media screen and (max-width: 768px) {
+  .services-image {
+    width: 100%;
+    max-width: 549px;
+    height: 400px;
+  }
+}
+.services-image img {
+  width: 100%;
+  height: 100%;
+}
+.services-text {
+  margin-top: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #30444e;
+}
+.services-text__red {
+  color: #ee4248;
+  font-weight: 500;
+}
+
+.textred {
+  width: 100%;
+  height: 350px;
+  background-color: #ee4248;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.textred-texttt {
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 134%;
+  text-align: center;
+  color: #fff;
+}
+
+.services {
+  margin-bottom: 60px;
+}
+.services-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .services-row {
+    flex-direction: column-reverse;
+  }
+}
+.services-contentt {
+  width: 48%;
+}
+@media screen and (max-width: 768px) {
+  .services-contentt {
+    width: 100%;
+  }
+}
+.services-image {
+  width: 48%;
+}
+@media screen and (max-width: 768px) {
+  .services-image {
+    width: 100%;
+    max-width: 549px;
+    height: 400px;
+  }
+}
+.services-image img {
+  width: 100%;
+  height: 100%;
+}
+.services-text {
+  margin-top: 30px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #30444e;
+}
+.services-text__red {
+  color: #ee4248;
+  font-weight: 500;
+}
+
+.partern {
+  background-color: #F9F9F9;
+  height: 420px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.partern-paragraph {
+  margin-top: 100px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 141%;
+  text-align: center;
+  color: #263238;
+  max-width: 885px;
+}
+.partern-texts {
+  margin-top: 20px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 141%;
+  text-align: center;
+  color: #455a64;
+  max-width: 778px;
+}
+
+.parterns {
+  margin-top: 152px;
+}
+.parterns-the {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 141%;
+  text-align: center;
+  color: #263238;
+}
+.parterns-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+}
+@media screen and (max-width: 760px) {
+  .parterns-block {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.parterns-lorem {
+  padding: 40px;
+  margin-top: 58px;
+  border-radius: 8px;
+  width: 315px;
+  height: 438px;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
+  background: #fff;
+}
+.parterns-lorem__loremm {
+  max-width: 263px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 141%;
+  color: #263238;
 }/*# sourceMappingURL=style.css.map */
